# Cubist-Hackathon-2026

./: .gitignore  ARENA_LOG.md  DISCOVERY_SCHEMA.md  FINAL_REPORT.md  MES_SCORING.md  README.md  prompts.md
OneShotHaiku/: PROJECT_SUMMARY.txt  QUICKSTART.md  requirements.txt  run.sh  test_engine.py
OneShotOpus/: STRATEGY_ANALYSIS.md  TOKEN_USAGE.md  requirements.txt  results.json
PlayerClass/: players.py
SimpleOneShot_bot/: engine.py  results.json
Strategy1/: ARENA_LOG.md  DARWINIAN_AI.md  STRATEGY_EVALUATION.md  Strategy1.md  cubist_chess_megaprompt.md  head.md  results.json
docs/: ARCHITECTURE.md  ARENA_LOG.md  ELO.md  FINAL_REPORT.md  FINAL_REPORT_4ENGINE.md  MES_SCORING.md
elo-test/: arena.py  grade.py  mes_calculator.py  test_engine.py
gui/: chess_gui.py  setup_pieces.py
pgns/: engine_vs_engine_game1.pgn  engine_vs_engine_game10.pgn  engine_vs_engine_game11.pgn  engine_vs_engine_game12.pgn  engine_vs_engine_game13.pgn  engine_vs_engine_game14.pgn  engine_vs_engine_game15.pgn  engine_vs_engine_game16.pgn  engine_vs_engine_game17.pgn  engine_vs_engine_game18.pgn  engine_vs_engine_game19.pgn  engine_vs_engine_game2.pgn  engine_vs_engine_game20.pgn  engine_vs_engine_game21.pgn  engine_vs_engine_game22.pgn  engine_vs_engine_game23.pgn  engine_vs_engine_game24.pgn  engine_vs_engine_game3.pgn  engine_vs_engine_game4.pgn  (+95 more)
src/tdd/: DISCOVERY.md  (+1 more)
strategies/Strategy1/engines/rust/: .gitignore  Cargo.toml  README.md  results.json
strategies/Strategy1/engines/rust/engine/: build.sh  run.sh
strategies/Strategy1/engines/rust/src/: eval.rs  main.rs  search.rs
(+132 files in other folders)
